docs: merge .claude_memory.md into AGENTS.md [skip ci]